Closed
Bug 236326
Opened 22 years ago
Closed 22 years ago
Browser stops responding (halts) when mathml document loaded without a stylesheet reference
Categories
(Core :: MathML, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: andrew, Assigned: rbs)
References
Details
Attachments
(2 files)
|
940 bytes,
application/xhtml+xml
|
Details | |
|
706 bytes,
patch
|
roc
:
review+
roc
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.6) Gecko/20040227 Firefox/0.8
Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.6) Gecko/20040227 Firefox/0.8
When a mathml document is loaded that does not contain the xml stylesheet PI or
the link element the browser will stop responding
Reproducible: Always
Steps to Reproduce:
Load the following document:
<?xml version="1.0" encoding="iso-8859-1" ?>
<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1 plus MathML 2.0//EN"
"http://www.w3.org/TR/MathML2/dtd/xhtml-math11-f.dtd" [
<!ENTITY mathml "http://www.w3.org/1998/Math/MathML">
]>
<html>
<head>
</head>
<body>
<math xmlns="http://www.w3.org/1998/Math/MathML"
xmlns:xlink="http://www.w3.org/1999/xlink" display="block" overflow="scroll">
<mtable class="eqnarray-star" columnalign="right center left">
<mtr><mtd class="eqnarray-1"> <mi>μ</mi></mtd><mtd class="eqnarray-2">
<mo class="MathClass-rel">=</mo></mtd><mtd class="eqnarray-3"> <munder
class="msub"><mrow><mo mathsize="big">∑</mo>
</mrow><mrow><mi>i</mi></mrow></munder><msub><mrow><mi>p</mi></mrow><mrow><mi>i</mi></mrow></msub><msub><mrow><mi>x</mi></mrow><mrow><mi>i</mi></mrow></msub>
</mtd><mtd class="eqnarray-4"> <mtext class="eqnarray"/></mtd>
</mtr></mtable>
</math>
</body>
</html>
Actual Results:
Browser stops responding
Expected Results:
Displayed some maths
Comment 1•22 years ago
|
||
Attached testcase for easy of use. Since I haven't got MathML installed,
nothing shows up except for crap.
Attachment #142853 -
Attachment mime type: text/html → application/xhtml+xml
Might be related to bug 122554, but I was not able reproduce that one on Win2K.
I am able to reproduce this one on Win2K, which is a good sign.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Due to the fact that child list of <mtext/>, we don't go inside an earlier
loop, and as result, there is a variable that can end-up unset, leading to
other troubles elsewhere.
Comment on attachment 142901 [details] [diff] [review]
fix variable that was not initialized
asking r/sr
Attachment #142901 -
Flags: superreview?(roc)
Attachment #142901 -
Flags: review?(roc)
*** Bug 122554 has been marked as a duplicate of this bug. ***
Attachment #142901 -
Flags: superreview?(roc)
Attachment #142901 -
Flags: superreview+
Attachment #142901 -
Flags: review?(roc)
Attachment #142901 -
Flags: review+
checked in.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•