fix a non initialized variable that was causing some MathML pages to hang, b=236326,122554, r+sr=roc